// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateComponent run should create expected App component files 1`] = `
"import React from 'react';
import ReactDOM from 'react-dom';
import { MemoryRouter } from 'react-router';
import App from './App';

it('renders without crashing', () => {  
    const div = document.createElement('div');
    ReactDOM.render(<MemoryRouter><App /></MemoryRouter>, div);
    ReactDOM.unmountComponentAtNode(div);
});"
`;

exports[`CreateComponent run should create expected App component files 2`] = `
"import { App as CoreApp, IAppProps, IIdentityContextProviderProps, IUIContextProviderProps, IUseLayoutProps } from '@reactionable/core';
import React, { FC, lazy } from 'react';
import { useTranslation } from 'react-i18next';
import './i18n/i18n';
import './App.scss';

const HomeComponent = lazy(() => import('./views/home/Home'));
const NotFoundComponent = lazy(() => import('./views/not-found/NotFound'));
const App: FC = () => {
  const { t } = useTranslation();

  // Configure app
  const appConfig: IAppProps<
    IIdentityContextProviderProps,
    IUIContextProviderProps,
    IUseLayoutProps
  > = {
    routes: [],
    HomeComponent,
    NotFoundComponent,
    ui: undefined, // You must provide UI context providers properties
    layout: {
      header: {
        brand: t('Tests'),
      },
      footer: {
        brand: t('Tests'),
      },
    },
    identity: undefined, // You must provide identity config to use private routes,
  };

  return <CoreApp {...appConfig} />;
};
export default App;"
`;

exports[`CreateComponent run should create expected components files 1`] = `
"import React from 'react';
import ReactDOM from 'react-dom';
import { MemoryRouter } from 'react-router';
import TestComponent from './TestComponent';

it('renders without crashing', () => {  
    const div = document.createElement('div');
    ReactDOM.render(<MemoryRouter><TestComponent /></MemoryRouter>, div);
    ReactDOM.unmountComponentAtNode(div);
});"
`;

exports[`CreateComponent run should create expected components files 2`] = `
"import React, { FC } from 'react';
import { Helmet } from 'react-helmet';
import { useTranslation } from 'react-i18next';

interface IProps { }
const TestComponent: FC<IProps> = (props) => {
  const { t } = useTranslation();
  
  return <>
    <Helmet>
      <title>{t('Tests')} - {t('Test component')}</title>
      <meta name=\\"description\\" content={t('Test component description')} />
    </Helmet>
    <h1>{t('Test component')}</h1>
    
  </>;
};
export default TestComponent;"
`;
